Expose more API via REST
